[B]0.6.8b[/B]
- Auto dismiss notification when playback finish (for Sync/Mirroring in outbound mode)

[B]0.6.6b[/B]
- Playback pushed link (youtube plugin supported)
- Sync/Mirroring: Send notifications to others devices (outbound mode):
- Media info playback (song and movie info with their thumbs!)
- Added to settings "Send a test notification" button
- Added support for Pushbullet Channels

[B]0.6.0b[/B]
- Hello Pushbullet :)