@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="service.pushbullet"
        name="Pushbullet"
-       version="0.6.8b"
+       version="0.6.10b"
        provider-name="muttley">
     <requires>
         <import addon="xbmc.addon" version="12.0.0"/>
